--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+flask
+flask-cors
+flask-login
+requests
 click==8.1.3
-Flask==2.2.3
-Flask-Cors==3.0.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
