--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,15 @@
 # misc
 .env
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+/__pycache__
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+frontend/node_modules/
