--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 .env.test.local
 .env.production.local
 /__pycache__
+/backend/controller/__pycache__
+/backend/db/__pycache__
+/backend/model/__pycache__
 
 npm-debug.log*
 yarn-debug.log*
