--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
