--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.8.4",
     "leaflet": "^1.9.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "react-avatar-edit": "^1.2.0",
     "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
